Replaced text highlight on span for mark tag so line no longer wraps

--- a/src/AppBundle/Resources/public/sass/common/_globalNew.scss
+++ b/src/AppBundle/Resources/public/sass/common/_globalNew.scss
@@ -100,6 +100,8 @@ hr {
 
 mark {
 	background-color: $lightest-blue;
+	padding: 4px;
+	@include border-radius(2px);
 }
 
 // Helpers - for rapid prototyping
@@ -173,8 +175,7 @@ mark {
 	}
 
 	.text-highlight {
-		display: inline-block;
-		padding: 3px 10px;
+		padding: 3px 5px;
         background-color: $off-white;
 		@include border-radius(3px);
 	}
